# earthscience

./: .gitignore  Makefile  README.md  birdspotting.md  build  ecological-survey-template.html  ecological-survey.html  ecological-survey.md  index.html  index.md  max_temp.py  resources-template.html  resources.html  resources.md  styles.css  template.html  trash_cleanup.md  wildlife-survey.md  wildlife_survey.md
Atmospheric_CO2_Analysis/: README.md
Atmospheric_CO2_Analysis/scripts/: mlo.py  (+1 more)
Fracking_and_Oklahoma_Quakes/: .gitignore
GeoJSON_in_Altair/: TopoJSON.ipynb
birdspotting/: readme.md
data/: climate.csv
dbc-checklist/: bird_data.csv  generate_checklist.py  markdown.html
es_kernel/: README.md  install_kernel.sh  pyproject.toml
field-work/: backyard.biodiversity  ext.yml  fall-survey.html  fall-survey.md  mixed-broadleaf.md  summer-survey.html  summer-survey.md  test-out.html  test.py
lectures/: earthscience_lectures.md
notebooks/: Animating Matplotlib Scatter Plots in Jupyter Notebooks.ipynb  Understanding Latitude and Longitude on Projections.ipynb  Untitled.ipynb
research/: bird_data.csv  generate-checklist.py  generate_checklist.py  index.html  life-under-the-waves.html  life-under-the-waves.md  max_temp.py  output.html  resources.md  winter-checklist.html  winter-checklist.md
templates/: ecological-survey-template.html  fall-survey-template.html  index-template.html  life-under-the-waves-template.html  summer-survey-template.html  template.html  winter-checklist-template.html
trash/: buffalo_bog_1  buffalo_bog_3  trash_cleanup.md
(+73 files in other folders)
