[tool.poetry]
name = "es_kernel"
version = "0.1.0"
description = ""
authors = ["kylepollina"]

[tool.poetry.dependencies]
python = "^3.7"
altair = "^4.1.0"
pandas = "^1.0.3"
altair-data-server = "^0.4.1"
ipykernel = "^5.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
